--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,10 +47,9 @@ jobs:
         run: rm -rf release
       - name: Prepare ccache timestamp
         id: ccache_cache_timestamp
-        shell: cmake -P {0}
         run: |
-          string(TIMESTAMP current_date "%Y-%m-%d-%H:%M:%S" UTC)
-          message("::set-output name=timestamp::${current_date}")
+          NOW=$(date -u +"%F-%T")
+          echo "timestamp=${NOW}" >> "$GITHUB_OUTPUT"
       - name: Cache ~/.ccache directory
         id: cache-ccache
         uses: actions/cache@v2
