--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,9 @@ jobs:
       matrix:
         os:
           - ubuntu-20.04_x86_64
+          - ubuntu-22.04_x86_64
     name: Build cpp-mp4 for ${{ matrix.os }}
-    runs-on: ubuntu-20.04
+    runs-on: ${{ contains(matrix.os, 'ubuntu-20.04') && 'ubuntu-20.04' || 'ubuntu-22.04' }}
     steps:
       - name: Install packages
         shell: bash
