chore: add h264 integration tests

--- a/test/integration/Makefile
+++ b/test/integration/Makefile
@@ -18,6 +18,8 @@ mux_test:
 	faketime -f '2020-12-01 00:00:00' ../../release/mp4-muxer aacvp9 -f output/aacvp9_test.mp4 --aac resources/aac.csv --vp9 resources/vp9.csv
 	faketime -f '2020-12-01 00:00:00' ../../release/mp4-muxer aacvp9_faststart -f output/aacvp9_faststart_test.mp4 --aac resources/aac.csv --vp9 resources/vp9.csv
 	faketime -f '2020-12-01 00:00:00' ../../release/mp4-muxer opusav1 -f output/opusav1_test.mp4 --opus resources/opus.csv --av1 resources/av1.csv
+	faketime -f '2020-12-01 00:00:00' ../../release/mp4-muxer aach264 -f output/aach264_test.mp4 --aac resources/aac.csv --h264 resources/h264.csv
+	faketime -f '2020-12-01 00:00:00' ../../release/mp4-muxer aach264_faststart -f output/aach264_faststart_test.mp4 --aac resources/aac.csv --h264 resources/h264.csv
 
 dump_test: get_input_files
 	for f in input/*.mp4; do \
